remove default html content

--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
     <main>
         <div id="credit">
             <div id="credit-content">
-                <span id="distance-credit">-57 mil</span>
+                <span id="distance-credit"></span>
                 <span id="credit-space">/</span>
-                <span id="time-credit">-14 dgr</span>
+                <span id="time-credit"></span>
             </div>
         </div>
         <div id="chart"></div>
