--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>DJ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex" />
+    <link rel="shortcut icon" type="image/png" href="/wheel.png" />
+    <link rel="apple-touch-icon" href="/wheel.png">
 
     <script>
         const LOG = [
