--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
         #chart {
             height: 480px;
         }
+
+        #bottom-space {
+            height: 64px;
+            padding: 1px 0;
+        }
     </style>
 </head>
 
@@ -175,6 +180,7 @@
             </div>
         </div>
         <div id="chart"></div>
+        <div id="bottom-space"></div>
     </main>
 </body>
 
