--- a/index.html
+++ b/index.html
@@ -7,31 +7,8 @@
     <meta name="robots" content="noindex" />
     <link rel="shortcut icon" type="image/png" href="/wheel.png" />
     <link rel="apple-touch-icon" href="/wheel.png">
-
+    <script src="/log.js"></script>
     <script>
-        const LOG = [
-            ["2022-07-08", 57389],
-            ["2022-07-09", 57399],
-            ["2022-07-10", 57399],
-            ["2022-07-11", 57415],
-            ["2022-07-12", 57431],
-            ["2022-07-13", 57447],
-            ["2022-07-14", 57463],
-            ["2022-07-15", 57481],
-            ["2022-07-16", 57500],
-            ["2022-07-17", 57910],
-            ["2022-07-18", 58250],
-            ["2022-07-19", 58250],
-            ["2022-07-20", 58300],
-            ["2022-07-21", 58350],
-            ["2022-07-22", 58690],
-            ["2022-07-23", 58690],
-            ["2022-07-24", 58690],
-            ["2022-07-25", 58706],
-            ["2022-07-26", 58722],
-            ["2022-07-27", 58738]
-        ];
-
         const RATE_LIMIT = 15000 / 365;
     </script>
 
