--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                     title: ''
                 },
                 vAxis: {
-                    title: 'km'
+                    title: ''
                 },
                 colors: ['#999', 'red'],
                 legend: 'none',
-                chartArea: { 'width': '75%', 'height': '85%' }
+                chartArea: { 'width': '85%', 'height': '85%' }
             };
 
             var chart = new google.visualization.LineChart(document.getElementById('chart'));
