--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
 
         main {
             max-width: 1024px;
-            margin: 0 auto;
+            margin: 3em auto;
         }
 
         #credit,
         #period-credit {
             display: flex;
             justify-content: center;
-            margin-top: 2em;
+            margin-bottom: 1em;
         }
 
         #credit-content,
@@ -190,8 +190,8 @@
 
         #period-credit-content {
             color: #666;
-            border-color: #888;
-            background-color: rgba(0, 0, 0, .04);
+            border-color: #999;
+            background-color: rgba(0, 0, 0, .03);
         }
 
         #credit-space {
@@ -201,7 +201,7 @@
         }
 
         #chart {
-            height: 480px;
+            height: 40vh;
             margin-bottom: 3em;
         }
 
