--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
 
             var options = {
                 hAxis: {
-                    title: ''
+                    title: '',
+                    textStyle: { fontName: 'Raleway' }
                 },
                 vAxis: {
-                    title: ''
+                    title: '',
+                    textStyle: { fontName: 'Raleway' }
                 },
                 colors: ['#999', 'red'],
                 legend: 'none',
