--- a/index.html
+++ b/index.html
@@ -180,25 +180,27 @@
         #credit-content,
         #period-credit-content {
             display: flex;
+            align-items: center;
+            justify-content: center;
             border-radius: .4em;
             font-weight: bold;
-            color: #383;
-            border: 2px solid #383;
-            background-color: rgba(48, 128, 48, .03);
+            color: #272;
+            border: 2px solid #272;
+            background-color: rgba(40, 120, 40, .04);
         }
 
         #credit-content > *,
         #period-credit-content > * {
-            padding: .5em 1.2em;
             border-right-width: inherit;
             border-right-color: inherit;
             border-right-style: inherit;
             text-align: center;
-            width: 70px;
+            padding: .5em 0;
+            width: 100px;
         }
 
         #period-credit-content > * {
-            width: 96px;
+            width: 120px;
         }
 
         #credit-content > *:last-child,
@@ -213,7 +215,7 @@
         }
 
         #period-credit-content {
-            color: #666;
+            color: #555;
             border-color: #888;
             background-color: rgba(0, 0, 0, .03);
         }
