--- a/index.html
+++ b/index.html
@@ -292,21 +292,21 @@
 
         <div id="chart"></div>
 
-        <h2>From — 7 Jul 2022</h2>
-        <div id="period-consumed">    
-            <div id="period-consumed-content">
-                <span id="period-distance-consumed"></span>
-                <span id="period-time-consumed"></span>
-                <span id="period-rate-consumed"></span>
-            </div>
-        </div>
-
-        <h2 style="margin-top: 3.5em;">To — 8 Jul 2023</h2>
+        <h2>Available until 8 Jul 2023</h2>
         <div id="period-credit">    
             <div id="period-credit-content">
                 <span id="period-distance-credit"></span>
                 <span id="period-time-credit"></span>
                 <span id="period-rate-credit"></span>
+            </div>
+        </div>
+
+        <h2 style="margin-top: 3.5em;">Spent from 7 Jul 2022</h2>
+        <div id="period-consumed">    
+            <div id="period-consumed-content">
+                <span id="period-distance-consumed"></span>
+                <span id="period-time-consumed"></span>
+                <span id="period-rate-consumed"></span>
             </div>
         </div>
 
