--- a/index.html
+++ b/index.html
@@ -282,7 +282,15 @@
 
         <div id="chart"></div>
 
-        <h2>Available until 8 Jul 2023</h2>
+        <h2>Spent from 7 Jul 2022</h2>
+        <div id="period-consumed">    
+            <div id="period-consumed-content">
+                <span id="period-distance-consumed"></span>
+                <span id="period-rate-consumed"></span>
+            </div>
+        </div>
+
+        <h2 style="margin-top: 3.5em;">Available until 8 Jul 2023</h2>
         <div id="period-credit">    
             <div id="period-credit-content">
                 <span id="period-distance-credit"></span>
@@ -290,13 +298,7 @@
             </div>
         </div>
 
-        <h2 style="margin-top: 3.5em;">Spent from 7 Jul 2022</h2>
-        <div id="period-consumed">    
-            <div id="period-consumed-content">
-                <span id="period-distance-consumed"></span>
-                <span id="period-rate-consumed"></span>
-            </div>
-        </div>
+
 
         <div id="bottom-space"></div>
 
